@@ -12,10 +12,12 @@
 #   See the License for the specific language governing permissions and
 #   limitations under the License.
 
-# Velosurf version
-version=2.3-dev
+# Velosurf
+project=velosurf
+version=2.3
+final.name=${project}-${version}
 
-# doownload jars from
+# download jars from
 proxy.host=
 proxy.port=80
 repo.url=http://mirrors.ibiblio.org/pub/mirrors/maven2
@@ -29,8 +31,8 @@ jar.crimson.version=1.1.3
 #jar.dom4j.version=1.6.1
 jar.jdom.version=1.1.1
 jar.servletapi.version=2.4
-jar.velocity.version=1.6.1
-jar.velocity-tools.version=2.0-beta4
+jar.velocity.version=1.7
+jar.velocity-tools.version=2.0
 
 # versions for downloaded jars - tests
 #jar.commons-httpclient.version=3.0.1
